# mstd-random-restaurant

./: Cargo.toml  README.md  spin.toml
.github/workflows/: release.yml
src/: lib.rs
